--- a/css/apl/animations/happy_new_year.css
+++ b/css/apl/animations/happy_new_year.css
@@ -29,7 +29,7 @@
   font-size: 1.1rem;
   border-radius: 5px;
   background-color: #fff;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .input button,
