--- a/css/apl/animations/index.css
+++ b/css/apl/animations/index.css
@@ -11,12 +11,11 @@
   flex-direction: column;
   align-items: center;
   gap: 1em;
-  padding-block: 1.5em;
+  padding: 1.5em 0;
   overflow: hidden;
   border-radius: 0.875em;
-  box-shadow: 0 0 2em rgba(0, 0, 0, .3);
+  box-shadow: 0 0 2em rgba(0, 0, 0, 0.3);
 }
-
 
 .card h2 {
   font-size: 2rem;
