--- a/css/apl/logic_games/index.css
+++ b/css/apl/logic_games/index.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   align-items: center;
   gap: 1em;
-  padding-block: 1.5em;
+  padding: 1.5em 0;
   overflow: hidden;
   border-radius: 0.875em;
   box-shadow: 0 0 2em rgba(0, 0, 0, 0.3);
@@ -42,7 +42,7 @@ table {
 }
 
 td {
-  border: 1px dashed #20202055;
+  border: 1px solid #20202055;
   border-right: none;
   border-bottom: none;
   text-align: center;
@@ -51,4 +51,20 @@ td {
   background-size: 72%;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+table tr td:first-child {
+  border-left: 1px solid #000;
+}
+
+table tr:first-child td {
+  border-top: 1px solid #000;
+}
+
+table tr td:last-child {
+  border-right: 1px solid #000;
+}
+
+table tr:last-child td {
+  border-bottom: 1px solid #000;
 }
