--- a/css/dyalog-apl.css
+++ b/css/dyalog-apl.css
@@ -1,5 +1,5 @@
-#dyalog-apl h1 {
-  margin-bottom: .5em;
+.dyalog-apl h1 {
+  margin-bottom: 0.5em;
   color: var(--clr-primary-900);
   text-decoration: underline var(--clr-primary-500);
 }
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   gap: 1em;
-  padding: 1em .5em;
+  padding: 1em 0.5em;
   background-color: var(--clr-primary-000);
   border-left: 6px solid var(--clr-primary-900);
   text-align: center;
@@ -28,10 +28,10 @@
   gap: 1em;
   max-width: 40em;
   position: relative;
-  margin-inline: 4rem;
+  margin: 0 4rem;
   font-family: Georgia, sans-serif;
   color: #4a4a4a;
-  quotes: "\201C""\201D""\2018""\2019";
+  quotes: '\201C''\201D''\2018''\2019';
 }
 
 .text-block blockquote::before,
@@ -69,8 +69,8 @@
 }
 
 .text-block:first-of-type a::after {
-  content: url("data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%2212%22 height=%2212%22%3E %3Cpath fill=%22%23ffcfce%22 stroke=%22%23ff3c38%22 d=%22M1.5 4.518h5.982V10.5H1.5z%22/%3E %3Cpath fill=%22%23ff3c38%22 d=%22M5.765 1H11v5.39L9.427 7.937l-1.31-1.31L5.393 9.35l-2.69-2.688 2.81-2.808L4.2 2.544z%22/%3E %3Cpath fill=%22%23ffcfce%22 d=%22M9.995 2.004l.022 4.885L8.2 5.07 5.32 7.95 4.09 6.723l2.882-2.88-1.85-1.852z%22/%3E %3C/svg%3E");
-  padding-left: .2em;
+  content: url('data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%2212%22 height=%2212%22%3E %3Cpath fill=%22%23ffcfce%22 stroke=%22%23ff3c38%22 d=%22M1.5 4.518h5.982V10.5H1.5z%22/%3E %3Cpath fill=%22%23ff3c38%22 d=%22M5.765 1H11v5.39L9.427 7.937l-1.31-1.31L5.393 9.35l-2.69-2.688 2.81-2.808L4.2 2.544z%22/%3E %3Cpath fill=%22%23ffcfce%22 d=%22M9.995 2.004l.022 4.885L8.2 5.07 5.32 7.95 4.09 6.723l2.882-2.88-1.85-1.852z%22/%3E %3C/svg%3E');
+  padding-left: 0.2em;
 }
 
 .cards {
@@ -78,9 +78,9 @@
   flex-direction: column;
   align-items: center;
   gap: 1em;
-  padding-inline: 1em;
+  padding: 0 1em;
   margin-top: 1em;
-  margin-inline: auto;
+  margin: 0 auto;
 }
 
 .card {
@@ -92,13 +92,13 @@
   overflow: hidden;
   background-color: #fff;
   border-radius: 0.875em;
-  box-shadow: 0 0 2em rgba(0, 0, 0, .3);
+  box-shadow: 0 0 2em rgba(0, 0, 0, 0.3);
 }
 
 .card h2 {
   color: var(--clr-primary-700);
   text-decoration: underline;
-  margin-inline: auto;
+  margin: 0 auto;
 }
 
 .card ol {
