--- a/css/blog/index.css
+++ b/css/blog/index.css
@@ -9,6 +9,18 @@ h1 {
   margin-left: 0;
 }
 
+h2 {
+  margin: 0;
+}
+
+h2::after {
+  content: '';
+  width: 100%;
+  border-bottom: 3px solid red;
+  display: inline-block;
+  margin-bottom: 0.25em;
+}
+
 h2 a {
   font-family: var(--ff-heading);
   color: var(--clr-primary-700);
@@ -16,24 +28,11 @@ h2 a {
   position: relative;
 }
 
-h2 a::after {
-  content: '.';
-  position: absolute;
-  color: transparent;
-  top: 0;
-  left: 0;
-  width: 60vw;
-  overflow: hidden;
-  padding-bottom: 0.3em;
-  border-bottom: 3px solid red;
-}
-
 .infos {
   display: flex;
   justify-content: space-between;
   color: var(--clr-dracula-grey);
   margin-bottom: 3em;
-  width: 60vw;
 }
 
 .author::before {
